--- a/Instagram Clone/templates/home/home.html
+++ b/Instagram Clone/templates/home/home.html
@@ -5,12 +5,131 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram.com</title>
+    <title>Instagram</title>
+    <!--==== Favicon ====-->
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="{% static 'home/icons/instagram.png'%}"
+    />
+    <!--==== Bootstrap CSS ====-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
     <!--==== External CSS ====-->
     <link rel="stylesheet" href="{% static 'home/home.css' %}" />
   </head>
   <body>
-    <h1>Hello World !</h1>
+    <!-- NAVBAR -->
+    {% include 'header/header.html' %}
+    <!-- NAVBAR -->
+
+    <!-- MAIN -->
+    <div class="container content">
+      <div class="row ps-4 mb-3 stories">
+        <div class="col">Hello</div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card mb-3" style="width: 30rem; z-index: -1">
+            <div class="card-header">
+              <div class="row align-center">
+                <div class="col-1">
+                  <img
+                    src="{% static 'home/icons/user.jpg' %}"
+                    class="user-post-card"
+                    alt="User"
+                  />
+                </div>
+                <div class="col-10"><p>ayushh_negi22</p></div>
+                <div class="col"><p style="font-size: 18px">...</p></div>
+              </div>
+            </div>
+            <img src="{% static 'home/icons/gojo.png'%}" alt="Post" />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card mb-3" style="width: 30rem; z-index: -1">
+            <div class="card-header">
+              <div class="row align-center">
+                <div class="col-1">
+                  <img
+                    src="{% static 'home/icons/user.jpg' %}"
+                    class="user-post-card"
+                    alt="User"
+                  />
+                </div>
+                <div class="col-10"><p>ayushh_negi22</p></div>
+                <div class="col"><p style="font-size: 18px">...</p></div>
+              </div>
+            </div>
+            <img src="{% static 'home/icons/user.jpg'%}" alt="Post" />
+            <div class="row">
+              <div class="col-1 ms-3">
+                <img
+                  class="home-icon"
+                  src="{% static 'home/icons/heart.png' %}"
+                  alt=""
+                />
+              </div>
+              <div class="col-1">
+                <img
+                  class="home-icon"
+                  src="{% static 'home/icons/chat.png' %}"
+                  alt=""
+                />
+              </div>
+              <div class="col-8">
+                <img
+                  class="home-icon"
+                  src="{% static 'home/icons/send.png' %}"
+                  alt=""
+                />
+              </div>
+              <div class="col">
+                <img
+                  class="home-icon"
+                  src="{% static 'home/icons/search.png' %}"
+                  alt=""
+                />
+              </div>
+              <p class="ms-3 mt-3"><b>1,000 likes</b></p>
+              <p class="ms-3">
+                <b>ayushh_negi22</b>
+                <span>With great powers comes great responsibility</span>
+              </p>
+              <p class="ms-3" style="font-size: 10px">26 MINUTES AGO</p>
+            </div>
+            <div class="form-floating">
+              <textarea
+                class="form-control"
+                placeholder="Leave a comment here"
+                id="floatingTextarea2"
+                style="height: 100px"
+              ></textarea>
+              <label for="floatingTextarea2">Comments</label>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
+  <!--==== Bootstrap JS ====-->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"
+  ></script>
+  <!--==== External JS ====-->
+  <script src="{% static 'home/home.js'%}"></script>
 </html>
 {% endblock %}
