--- a/Instagram Clone/templates/header/header.html
+++ b/Instagram Clone/templates/header/header.html
@@ -1,4 +1,4 @@
-{% load static%} {% block content %}
+{% load static %} {% block content %}
 <!--==== NAVBAR ====-->
 <nav
   class="container-fluid navbar navbar-expand-lg bg-white position-fixed top-0 start-50 translate-middle-x"
@@ -6,7 +6,10 @@
 >
   <div class="container header">
     <a class="navbar-brand" style="margin-right: 200px" href="#"
-      ><img class="logo" src="{% static 'home/icons/logo.png' %}" alt=""
+      ><img
+        class="logo"
+        src="{% static 'home/icons/logo.png' %}"
+        alt="Instagram"
     /></a>
     <form class="d-none d-md-block" style="margin-right: 120px" role="search">
       <input
@@ -30,43 +33,48 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#"
+          <a id="home-link" class="nav-link active" aria-current="page" href="#"
             ><img
+              id="home"
               class="home-icon"
-              src="{%static 'home/icons/home.png' %}"
-              alt=""
+              src="{%static 'home/icons/black-home.png' %}"
+              alt="Home"
           /></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"
             ><img
+              id="message"
               class="msg-icon"
               src="{% static 'home/icons/messenger.png' %}"
-              alt=""
+              alt="Messages"
           /></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"
             ><img
+              id="post"
               class="insta-post"
               src="{% static 'home/icons/instagram-post.png' %}"
-              alt=""
+              alt="Create"
           /></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"
             ><img
+              id="explore"
               class="insta-post"
               src="{% static 'home/icons/explore.png' %}"
-              alt=""
+              alt="Explore"
           /></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"
             ><img
+              id="notify"
               class="insta-post"
               src="{% static 'home/icons/heart.png' %}"
-              alt=""
+              alt="Notifications"
           /></a>
         </li>
         <li class="nav-item">
@@ -74,7 +82,7 @@
             ><img
               class="user-post"
               src="{% static 'home/icons/user.jpg' %}"
-              alt=""
+              alt="User"
           /></a>
         </li>
       </ul>
@@ -82,4 +90,98 @@
   </div>
 </nav>
 <!--==== NAVBAR ====-->
+
+<!-- JAVSCRIPT -->
+<script>
+  // changing navbar icons on click
+
+  // accessing all navbar elements with Id
+  let home = document
+    .getElementById("home")
+    .addEventListener("click", change_home_icon); // home
+  let message = document
+    .getElementById("message")
+    .addEventListener("click", change_message_icon); // message
+  let create = document
+    .getElementById("post")
+    .addEventListener("click", change_add_icon); // post
+  let explore = document
+    .getElementById("explore")
+    .addEventListener("click", change_explore_icon); // explore
+  let notification = document
+    .getElementById("notify")
+    .addEventListener("click", change_notification_icon); // notification
+
+  // change home icons
+  function change_home_icon() {
+    let home = document.getElementById("home"); // home
+    let message = document.getElementById("message"); // message
+    let create = document.getElementById("post"); // post
+    let explore = document.getElementById("explore"); // explore
+    let notification = document.getElementById("notify"); // notification
+    home.src = "{% static 'home/icons/black-home.png' %}";
+    message.src = "{% static 'home/icons/messenger.png' %}";
+    create.src = "{% static 'home/icons/instagram-post.png' %}";
+    explore.src = "{% static 'home/icons/explore.png' %}";
+    notification.src = "{% static 'home/icons/heart.png' %}";
+  }
+
+  // change message icon
+  function change_message_icon() {
+    let home = document.getElementById("home"); // home
+    let message = document.getElementById("message"); // message
+    let create = document.getElementById("post"); // post
+    let explore = document.getElementById("explore"); // explore
+    let notification = document.getElementById("notify"); // notification
+    message.src = "{% static 'home/icons/black-messenger.png' %}";
+    home.src = "{% static 'home/icons/home.png' %}";
+    create.src = "{% static 'home/icons/instagram-post.png' %}";
+    explore.src = "{% static 'home/icons/explore.png' %}";
+    notification.src = "{% static 'home/icons/heart.png' %}";
+  }
+
+  // change post icon
+  function change_add_icon() {
+    let home = document.getElementById("home"); // home
+    let message = document.getElementById("message"); // message
+    let create = document.getElementById("post"); // post
+    let explore = document.getElementById("explore"); // explore
+    let notification = document.getElementById("notify"); // notification
+    create.src = "{% static 'home/icons/black-instagram-icon.png' %}";
+    message.src = "{% static 'home/icons/messenger.png' %}";
+    home.src = "{% static 'home/icons/home.png' %}";
+    explore.src = "{% static 'home/icons/explore.png' %}";
+    notification.src = "{% static 'home/icons/heart.png' %}";
+  }
+
+  // change explore icon
+  function change_explore_icon() {
+    let home = document.getElementById("home"); // home
+    let message = document.getElementById("message"); // message
+    let create = document.getElementById("post"); // post
+    let explore = document.getElementById("explore"); // explore
+    let notification = document.getElementById("notify"); // notification
+    explore.src = "{% static 'home/icons/black-explore.png' %}";
+    create.src = "{% static 'home/icons/instagram-post.png' %}";
+    message.src = "{% static 'home/icons/messenger.png' %}";
+    home.src = "{% static 'home/icons/home.png' %}";
+    notification.src = "{% static 'home/icons/heart.png' %}";
+  }
+
+  // change notification icon
+  function change_notification_icon() {
+    let home = document.getElementById("home"); // home
+    let message = document.getElementById("message"); // message
+    let create = document.getElementById("post"); // post
+    let explore = document.getElementById("explore"); // explore
+    let notification = document.getElementById("notify"); // notification
+    notification.src = "{% static 'home/icons/black-heart.png' %}";
+    create.src = "{% static 'home/icons/instagram-post.png' %}";
+    message.src = "{% static 'home/icons/messenger.png' %}";
+    home.src = "{% static 'home/icons/home.png' %}";
+    explore.src = "{% static 'home/icons/explore.png' %}";
+  }
+</script>
+<!-- JAVASCRIPT -->
+
 {% endblock %}
