--- a/Instagram Clone/templates/home/home.html
+++ b/Instagram Clone/templates/home/home.html
@@ -25,6 +25,7 @@
   <body>
     <!-- NAVBAR -->
     {% include 'header/header.html' %}
+    
     <!-- NAVBAR -->
 
     <!-- MAIN -->
@@ -48,58 +49,35 @@
                 <div class="col"><p style="font-size: 18px">...</p></div>
               </div>
             </div>
-            <img src="{% static 'home/icons/gojo.png'%}" alt="Post" />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-          <div class="card mb-3" style="width: 30rem; z-index: -1">
-            <div class="card-header">
-              <div class="row align-center">
-                <div class="col-1">
-                  <img
-                    src="{% static 'home/icons/user.jpg' %}"
-                    class="user-post-card"
-                    alt="User"
-                  />
-                </div>
-                <div class="col-10"><p>ayushh_negi22</p></div>
-                <div class="col"><p style="font-size: 18px">...</p></div>
-              </div>
-            </div>
             <img src="{% static 'home/icons/user.jpg'%}" alt="Post" />
             <div class="row">
               <div class="col-1 ms-3">
-                <img
-                  class="home-icon"
-                  src="{% static 'home/icons/heart.png' %}"
-                  alt=""
-                />
+                  <img
+                    id="hello"
+                    class="home-icon"
+                    src="{% static 'home/icons/heart.png' %}"
+                    alt="Like"
+                  />
               </div>
               <div class="col-1">
                 <img
                   class="home-icon"
                   src="{% static 'home/icons/chat.png' %}"
-                  alt=""
+                  alt="Comment"
                 />
               </div>
               <div class="col-8">
                 <img
                   class="home-icon"
                   src="{% static 'home/icons/send.png' %}"
-                  alt=""
+                  alt="Share"
                 />
               </div>
               <div class="col">
                 <img
                   class="home-icon"
                   src="{% static 'home/icons/search.png' %}"
-                  alt=""
+                  alt="Saved"
                 />
               </div>
               <p class="ms-3 mt-3"><b>1,000 likes</b></p>
@@ -122,14 +100,15 @@
         </div>
       </div>
     </div>
+    <button id="btn">New</button>
+    <!--==== External JS ====-->
+    <script src="{% static 'home/app.js' %}"></script>
     <!--==== Bootstrap JS ====-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <!--==== External JS ====-->
-    <script src="{% static 'home/home.js'%}"></script>
   </body>
 </html>
 {% endblock %}
